code review feedback
Signed-off-by: Pawel Leszczynski <leszczynski.pawel@gmail.com>